--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -23,7 +23,7 @@
             display: flex;
             gap: 10px;
             margin-bottom: 10px;
-            align voed-items: center;
+            align-items: center;
         }
         .input-line label {
             flex-shrink: 0;
@@ -159,45 +159,60 @@
 </head>
 <body>
     <h1>Helsa Nurse Scheduling Application</h1>
-    <p>Nurse scheduling (or shift management) is a long-standing challenge in many hospitals and healthcare systems. While the problem has been widely studied in academia, especially in operations research, there are still very few software tools that are actually used by hospital staff.</p>
+    <p>Nurse scheduling (or shift management) is a long-standing challenge in many hospitals and healthcare systems. While the problem has been widely studied in academia, especially in operations research, there are still very few software tools that are actually used by hospital staff.
+
+        </p>
     <p>Based on our interviews with nurses from three different cities in Iran, we found that nurse scheduling is still often done manually by one of the volunteer nurses. This process can be time-consuming and inefficient, especially when considering multiple constraints such as department-specific shift requirements, and fairness (based on seniority, weekend and night shifts, and individual preferences).
-This problem is a variation of the classic "assignment problem" in operations research. To address this problem, we develop an integer programming model in Python using the Gurobi optimization library. More technical details are available in the application catalog.</p>
-    <p> To generate the optimal nurse schedule, the following three sets of inputs are defined: a) Nurse ID/Name/Seniority. b) Preferences for each shift (if available). c) Shift requirements (number of nurses needed per shift across the planning horizon).
-You can enter the inputs in one of two ways of file upload and manual entry. You can also combine both methods, manual entries will override any matching entries from the uploaded files.</p>
-    <p>If you would like to upload your own input files, please use the format provided in the template files available on this page. Download the three input templates, complete them using your own nurse data and requirements, and make sure to keep the header rows and file names unchanged. Upload the completed files and then click "Generate Schedule and Reports".</p>
-    <p>You can also download sample output files (generated based on the template inputs) to understand the expected format and compare them with your own results. These sample outputs are provided at the bottom of this page and will be replaced with new output files based on your uploaded inputs after generating the schedule.</p>
+This problem is a variation of the classic "assignment problem" in operations research. To address this problem, we develop an integer programming model in Python using the Gurobi optimization library. More technical details are available in the application catalog. 
+        </p>
+       <p> To generate the optimal nurse schedule, the following three sets of inputs are defined: a) Nurse ID/Name/Seniority. b) Preferences for each shift (if available). c) Shift requirements (number of nurses needed per shift across the planning horizon).
+You can enter the inputs in one of two ways of file upload and manual entry. You can also combine both methods, manual entries will override any matching entries from the uploaded files.
+
+</p>
+
+    <p>
+        If you would like to upload your own input files, please use the format provided in the template files available on this page. Download the three input templates, complete them using your own nurse data and requirements, and make sure to keep the header rows and file names unchanged. Upload the completed files and then click "Generate Schedule and Reports".
+    </p>
+
+    <p>
+        You can also download sample output files (generated based on the template inputs) to understand the expected format and compare them with your own results. These sample outputs are provided at the bottom of this page and will be replaced with new output files based on your uploaded inputs after generating the schedule.
+    </p>
 
     <div id="templates" class="input-section">
         <h2>Download Templates</h2>
+
         <a href="templates/nurses_file.csv" download="nurses_file.csv">Download Nurses Template (CSV)</a>
         <a href="templates/preferences_file.csv" download="preferences_file.csv">Download Preferences Template (CSV)</a>
         <a href="templates/requirements_file.csv" download="requirements_file.csv">Download Requirements Template (CSV)</a>
     </div>
 
+
+
     <div class="input-section">
         <h2>Manual Input</h2>
+
         <div id="manual-inputs">
             <div id="nurses-input">
                 <h3>Nurses Information</h3>
-                <p class="note">Enter nurse ID, Name, and Type (1 for normal, 2 for senior).</p>
+                <p class="note">Enter nurse ID, Name, and Type (0 for normal, 1 for senior).</p>
                 <div class="input-line">
                     <label>Nurse Info:</label>
                     <input type="text" placeholder="ID" data-input-type="nurse_id">
                     <input type="text" placeholder="Name" data-input-type="nurse_name">
-                    <input type="number" placeholder="Type (1/2)" data-input-type="nurse_type" min="1" max="2">
+                    <input type="number" placeholder="Type (0/1)" data-input-type="nurse_type" min="0" max="1">
                 </div>
                 <button type="button" class="add-button" onclick="addNurseInput()">Add Nurse</button>
             </div>
 
             <div id="requirements-input">
                 <h3>Shift Requirements</h3>
-                <p class="note">Specify start date, end date, shift (1: Morning, 2: Evening, 3: Night), nurse type (1 for all, 2 for senior), minimum and maximum required nurses.</p>
+                <p class="note">Specify start date, end date, shift (1: Morning, 2: Evening, 3: Night), nurse type (0 for all, 1 for senior), minimum and maximum required nurses.</p>
                 <div class="input-line">
                     <label>Requirement:</label>
                     <input type="date" placeholder="Start Date" data-input-type="req_start_date">
                     <input type="date" placeholder="End Date" data-input-type="req_end_date">
                     <input type="number" placeholder="Shift (1/2/3)" data-input-type="req_shift" min="1" max="3">
-                    <input type="number" placeholder="Nurse Type (1/2)" data-input-type="req_nurse_type" min="1" max="2">
+                    <input type="number" placeholder="Nurse Type (0/1)" data-input-type="req_nurse_type" min="0" max="1">
                     <input type="number" placeholder="Min Req" data-input-type="req_min" min="0">
                     <input type="number" placeholder="Max Req" data-input-type="req_max" min="0">
                 </div>
@@ -219,9 +234,9 @@ You can enter the inputs in one of two ways of file upload and manual entry. You
         </div>
     </div>
 
-    <div class="input-section">
+        <div class="input-section">
         <h2>File Upload</h2>
-        <p class="note">Leave blank if using manual input.</p>
+        <p class="note"> Leave blank if using manual input.</p>
         <label for="nursesFile" class="upload-label">Upload Nurses Data (CSV):</label>
         <input type="file" id="nursesFile" accept=".csv">
         <label for="preferencesFile" class="upload-label">Upload Preferences Data (CSV):</label>
@@ -233,21 +248,25 @@ You can enter the inputs in one of two ways of file upload and manual entry. You
     <button type="button" onclick="generateSchedule()">Generate Schedule and Reports</button>
     <div id="status"></div>
 
-    <div id="reports">
-        <h2>Reports</h2>
-        <p class="note">Download the generated reports in CSV format.</p>
-        <a id="schedule-csv" href="#" style="display: none;">Download Optimal Schedule (CSV)</a>
-        <a id="stats-csv" href="#" style="display: none;">Download Nurse Statistics (CSV)</a>
-        <a id="coverage-csv" href="#" style="display: none;">Download Shift Coverage (CSV)</a>
-    </div>
+             <div id="reports">
+                <h2>Reports</h2>
+                <p class="note">Download the generated reports in CSV format.</p>
+                <a id="schedule-csv" href="#" style="display: none;">Download Optimal Schedule (CSV)</a>
+                <a id="stats-csv" href="#" style="display: none;">Download Nurse Statistics (CSV)</a>
+                <a id="coverage-csv" href="#" style="display: none;">Download Shift Coverage (CSV)</a>
+            </div>
+
+
 
     <div id="gantt-chart">
         <h2>Gantt Chart</h2>
-        <p class="note"></p>
+        <p class="note"> </p>
         <span id="gantt-caption" style="display:block; text-align:center; color:#777; font-size:0.9em; margin-top:5px;">The below Gantt chart is based on template inputs. The optimal Gantt chart based on your inputs will be displayed here after new schedule generation.</span>
         <img id="gantt-placeholder" src="templates/placeholder_gantt.png" alt="Gantt Chart Placeholder">
         <img id="gantt-image" style="max-width: 100%; display: none;" alt="Gantt Chart">
     </div>
+
+
 
     <script>
         // Validation
@@ -282,7 +301,7 @@ You can enter the inputs in one of two ways of file upload and manual entry. You
                 <label>Nurse Info:</label>
                 <input type="text" placeholder="ID" data-input-type="nurse_id" readonly>
                 <input type="text" placeholder="Name" data-input-type="nurse_name" readonly>
-                <input type="number" placeholder="Type (1/2)" data-input-type="nurse_type" min="1" max="2" readonly>
+                <input type="number" placeholder="Type (0/1)" data-input-type="nurse_type" min="0" max="1" readonly>
                 <button type="button" class="action-button edit-button" onclick="editInput(this)">Edit</button>
                 <button type="button" class="action-button delete-button" onclick="deleteInput(this)">Delete</button>
             `;
@@ -318,7 +337,7 @@ You can enter the inputs in one of two ways of file upload and manual entry. You
                 <input type="date" placeholder="Start Date" data-input-type="req_start_date" readonly>
                 <input type="date" placeholder="End Date" data-input-type="req_end_date" readonly>
                 <input type="number" placeholder="Shift (1/2/3)" data-input-type="req_shift" min="1" max="3" readonly>
-                <input type="number" placeholder="Nurse Type (1/2)" data-input-type="req_nurse_type" min="1" max="2" readonly>
+                <input type="number" placeholder="Nurse Type (0/1)" data-input-type="req_nurse_type" min="0" max="1" readonly>
                 <input type="number" placeholder="Min Req" data-input-type="req_min" min="0" readonly>
                 <input type="number" placeholder="Max Req" data-input-type="req_max" min="0" readonly>
                 <button type="button" class="action-button edit-button" onclick="editInput(this)">Edit</button>
@@ -403,7 +422,7 @@ You can enter the inputs in one of two ways of file upload and manual entry. You
             return `${month}/${day}/${year}`;
         }
 
-        // Convert manual inputs to CSV format, mapping nurse type 1/2 to 0/1 for backend
+        // Convert manual inputs to CSV format
         function manualToCSV() {
             const nurses = [];
             const requirements = [];
@@ -412,8 +431,7 @@ You can enter the inputs in one of two ways of file upload and manual entry. You
             // Nurses data
             document.querySelectorAll('#nurses-input .entered-item').forEach(line => {
                 const inputs = line.querySelectorAll('input');
-                const nurseType = parseInt(inputs[2].value) - 1; // Convert 1/2 to 0/1
-                nurses.push(`${inputs[0].value},${inputs[1].value},${nurseType}`);
+                nurses.push(`${inputs[0].value},${inputs[1].value},${inputs[2].value}`);
             });
 
             // Shift requirements data
@@ -421,8 +439,7 @@ You can enter the inputs in one of two ways of file upload and manual entry. You
                 const inputs = line.querySelectorAll('input');
                 const startDate = formatDateToMMDDYYYY(inputs[0].value);
                 const endDate = formatDateToMMDDYYYY(inputs[1].value);
-                const nurseType = parseInt(inputs[3].value) - 1; // Convert 1/2 to 0/1
-                requirements.push(`${startDate},${endDate},${inputs[2].value},${nurseType},${inputs[4].value},${inputs[5].value}`);
+                requirements.push(`${startDate},${endDate},${inputs[2].value},${inputs[3].value},${inputs[4].value},${inputs[5].value}`);
             });
 
             // Preferences data
@@ -439,7 +456,7 @@ You can enter the inputs in one of two ways of file upload and manual entry. You
             };
         }
 
-        // Merge data from uploaded files and manual inputs, handling nurse type conversion
+        // Merge data from uploaded files and manual inputs
         async function mergeInputs(nursesFile, preferencesFile, requirementsFile) {
             const manual = manualToCSV();
             const result = { nurses: [], preferences: [], requirements: [] };
@@ -458,20 +475,12 @@ You can enter the inputs in one of two ways of file upload and manual entry. You
                 readFile(requirementsFile)
             ]);
 
-            // Process nurses data (uploaded files use 0/1, convert to 1/2 for UI, back to 0/1 for backend)
+            // Process nurses data
             if (nursesFileContent) {
-                result.nurses = nursesFileContent.split('\n').slice(1).filter(line => line.trim()).map(line => {
-                    const [id, name, type] = line.split(',');
-                    const convertedType = parseInt(type) + 1; // Convert 0/1 to 1/2 for UI
-                    return `${id},${name},${convertedType}`;
-                });
+                result.nurses = nursesFileContent.split('\n').slice(1).filter(line => line.trim());
             }
             if (manual.nurses) {
-                const manualNurses = manual.nurses.split('\n').slice(1).filter(line => line.trim()).map(line => {
-                    const [id, name, type] = line.split(',');
-                    const convertedType = parseInt(type) + 1; // Convert 0/1 (from manualToCSV) back to 1/2 for UI
-                    return `${id},${name},${convertedType}`;
-                });
+                const manualNurses = manual.nurses.split('\n').slice(1).filter(line => line.trim());
                 const nurseIds = new Set(result.nurses.map(line => line.split(',')[0]));
                 manualNurses.forEach(line => {
                     const id = line.split(',')[0];
@@ -506,20 +515,12 @@ You can enter the inputs in one of two ways of file upload and manual entry. You
                 });
             }
 
-            // Process shift requirements data (uploaded files use 0/1, convert to 1/2 for UI, back to 0/1 for backend)
+            // Process shift requirements data
             if (requirementsFileContent) {
-                result.requirements = requirementsFileContent.split('\n').slice(1).filter(line => line.trim()).map(line => {
-                    const [start, end, shift, type, min, max] = line.split(',');
-                    const convertedType = parseInt(type) + 1; // Convert 0/1 to 1/2 for UI
-                    return `${start},${end},${shift},${convertedType},${min},${max}`;
-                });
+                result.requirements = requirementsFileContent.split('\n').slice(1).filter(line => line.trim());
             }
             if (manual.requirements) {
-                const manualReqs = manual.requirements.split('\n').slice(1).filter(line => line.trim()).map(line => {
-                    const [start, end, shift, type, min, max] = line.split(',');
-                    const convertedType = parseInt(type) + 1; // Convert 0/1 (from manualToCSV) back to 1/2 for UI
-                    return `${start},${end},${shift},${convertedType},${min},${max}`;
-                });
+                const manualReqs = manual.requirements.split('\n').slice(1).filter(line => line.trim());
                 const reqKeys = new Set(result.requirements.map(line => line.split(',').slice(0, 4).join(',')));
                 manualReqs.forEach(line => {
                     const key = line.split(',').slice(0, 4).join(',');
@@ -534,19 +535,11 @@ You can enter the inputs in one of two ways of file upload and manual entry. You
                 });
             }
 
-            // Convert the merged data back to CSV strings, mapping nurse type 1/2 to 0/1 for backend
+            // Convert the merged data back to CSV strings
             return {
-                nurses: result.nurses.length ? 'ID,name,type\n' + result.nurses.map(line => {
-                    const [id, name, type] = line.split(',');
-                    const backendType = parseInt(type) - 1; // Convert 1/2 to 0/1
-                    return `${id},${name},${backendType}`;
-                }).join('\n') : '',
+                nurses: result.nurses.length ? 'ID,name,type\n' + result.nurses.join('\n') : '',
                 preferences: result.preferences.length ? 'nurse_id,shift_id,date,preference\n' + result.preferences.join('\n') : '',
-                requirements: result.requirements.length ? 'start_date,end_date,shift_id,nurse_type,min_req,max_req\n' + result.requirements.map(line => {
-                    const [start, end, shift, type, min, max] = line.split(',');
-                    const backendType = parseInt(type) - 1; // Convert 1/2 to 0/1
-                    return `${start},${end},${shift},${backendType},${min},${max}`;
-                }).join('\n') : ''
+                requirements: result.requirements.length ? 'start_date,end_date,shift_id,nurse_type,min_req,max_req\n' + result.requirements.join('\n') : ''
             };
         }
 
@@ -605,8 +598,8 @@ You can enter the inputs in one of two ways of file upload and manual entry. You
                     document.getElementById('stats-csv').href = outputBaseURL + 'nurse_stats.csv';
                     document.getElementById('coverage-csv').href = outputBaseURL + 'shift_coverage.csv';
                     document.getElementById('gantt-image').src = outputBaseURL + 'schedule_gantt.png';
-                    document.getElement_obviously_its_not_my_style_but_I_needed_to_fix_the_code_block_for_you_so_you_dont_get_an_error_since_I_cant_actually_run_it_and_I_want_to_make_sure_its_correct_and_complete_for_you_but_I_dont_know_if_it_will_work_since_I_cant_test_it_myself_but_I_hope_it_does_and_if_it_doesnt_please_let_me_know_so_I_can_fix_it_for_you_thanks_and_sorry_for_the_long_variable_name_but_I_wanted_to_be_clear_and_make_sure_you_get_working_code_even_though_I_cant_run_it_myself = 'block';
-                    document.getElementById('gantt-image').style.display = document.getElementById('gantt-image').style.display = 'block';
+                    document.getElementById('gantt-placeholder').style.display = 'none';
+                    document.getElementById('gantt-image').style.display = 'block';
                     document.getElementById('schedule-csv').style.display = 'block';
                     document.getElementById('stats-csv').style.display = 'block';
                     document.getElementById('coverage-csv').style.display = 'block';
