--- a/projects/helsa/nsp_ui.html
+++ b/projects/helsa/nsp_ui.html
@@ -204,7 +204,7 @@
     <div id="general-info-content" class="explanation-content">
         <p>Nurse scheduling (or shift management) is a long-standing challenge in many hospitals and healthcare systems. While the problem has been widely studied in academia, especially in operations research, there are still few software tools that are actually used by hospital staff.</p>
         <p>Based on our interviews with nurses from three different hospitals in Iran, we found that nurse scheduling is still often done manually by one of the volunteer nurses. This process can be time-consuming and inefficient, especially when considering multiple constraints such as department-specific shift requirements, and fairness (based on seniority, weekend and night shifts, and individual preferences). This problem is a variation of the classic "assignment problem" in operations research. To address this problem, we develop an integer programming model in Python using the Gurobi optimization library. More technical details are available in the application catalog.</p>
-        <p>To generate the optimal nurse schedule, the following three sets of inputs are defined: a) Nurse ID/Name/Seniority. b) Shift requirements (number of nurses needed per shift across the planning horizon). c) Preferences of each nurse for each shift (if available). You can enter the inputs in one of two ways of file upload and manual entry. You can also combine both methods, manual entries will override any matching entries from the uploaded files.</p>
+        <p>To generate the optimal nurse schedule, the following three sets of inputs are defined: a) Nurse ID/Name/Seniority. b) Preferences of each nurse for each shift (if available). c) Shift requirements (number of nurses needed per shift across the planning horizon). You can enter the inputs in one of two ways of file upload and manual entry. You can also combine both methods, manual entries will override any matching entries from the uploaded files.</p>
         <p>If you would like to upload your own input files, please use the format provided in the template files available on this page. Download the three input templates, complete them using your own nurse data and requirements, and make sure to keep the header rows and file names unchanged. Upload the completed files and then click "Generate Schedule and Reports".</p>
         <p>You can also download sample output files (generated based on the template inputs) to understand the expected format and compare them with your own results. These sample outputs are provided in the Reports section below and will be replaced with new output files based on your uploaded inputs after generating the schedule.</p>
     </div>
@@ -282,12 +282,10 @@
         <a id="stats-placeholder" href="templates/placeholder_stats.csv" download="placeholder_stats.csv">Download Sample Nurse Statistics (CSV)</a>
         <a id="coverage-placeholder" href="templates/placeholder_coverage.csv" download="placeholder_coverage.csv">Download Sample Shift Coverage (CSV)</a>
         <a id="pdf-placeholder" href="templates/placeholder_report.pdf" download="placeholder_report.pdf">Download Sample Nurse Report (PDF)</a>
-        <a id="gantt_file-placeholder" href="templates/placeholder_gantt.png" download="placeholder_gantt.png">Download Sample Schedule Gantt Chart File (PNG)</a>
         <a id="schedule-csv" href="#" style="display: none;">Download Optimal Schedule (CSV)</a>
         <a id="stats-csv" href="#" style="display: none;">Download Nurse Statistics (CSV)</a>
         <a id="coverage-csv" href="#" style="display: none;">Download Shift Coverage (CSV)</a>
         <a id="pdf-report" href="#" style="display: none;">Download Nurse Report (PDF)</a>
-        <a id="gantt-report" href="#" style="display: none;">Download Schedule Ganttchart File (PNG)</a>
     </div>
 
     <div id="gantt-chart">
@@ -597,39 +595,27 @@ async function generateSchedule() {
     }
 
     document.getElementById('status').innerText = 'Processing inputs and running optimization...';
-    // Reset Gantt chart display
-    document.getElementById('gantt-placeholder').style.display = 'block'; // This is the image placeholder
-    document.getElementById('gantt-image').style.display = 'none'; // This is for the generated image
+    // Reset Gantt chart
+    document.getElementById('gantt-placeholder').style.display = 'block';
+    document.getElementById('gantt-image').style.display = 'none';
     document.getElementById('gantt-caption').innerText = 'The below Gantt chart is based on template inputs.';
-
-    // Reset Reports section: Hide all sample links and show generated links later if successful
-    document.getElementById('schedule-placeholder').style.display = 'none'; // Hide sample
-    document.getElementById('stats-placeholder').style.display = 'none';     // Hide sample
-    document.getElementById('coverage-placeholder').style.display = 'none';  // Hide sample
-    document.getElementById('pdf-placeholder').style.display = 'none';       // Hide sample
-    document.getElementById('gantt_file-placeholder').style.display = 'none'; // <--- ADD THIS LINE TO HIDE THE SAMPLE GANTT DOWNLOAD LINK
-
+    // Reset Reports section
+    document.getElementById('schedule-placeholder').style.display = 'block';
+    document.getElementById('stats-placeholder').style.display = 'block';
+    document.getElementById('coverage-placeholder').style.display = 'block';
+    document.getElementById('pdf-placeholder').style.display = 'block';
     document.getElementById('schedule-csv').style.display = 'none';
     document.getElementById('stats-csv').style.display = 'none';
     document.getElementById('coverage-csv').style.display = 'none';
     document.getElementById('pdf-report').style.display = 'none';
-    document.getElementById('gantt-report').style.display = 'none';
-
-    document.getElementById('reports-caption').innerText = 'Generating schedule...'; // Update caption during processing
+    document.getElementById('reports-caption').innerText = 'The below reports are sample outputs based on template inputs. The optimal reports based on your inputs will be available here after generating the new schedule.';
 
     try {
         const mergedData = await mergeInputs(nursesFile, preferencesFile, requirementsFile);
 
         // Basic validation to ensure all data types are present
         if (!mergedData.nurses || !mergedData.preferences || !mergedData.requirements) {
-            document.getElementById('status').innerText = 'Incomplete input data. Please provide all required data (Nurses, Requirements, Preferences).';
-            // Re-show sample links if input is incomplete, or handle this logic based on your UX
-            document.getElementById('schedule-placeholder').style.display = 'block';
-            document.getElementById('stats-placeholder').style.display = 'block';
-            document.getElementById('coverage-placeholder').style.display = 'block';
-            document.getElementById('pdf-placeholder').style.display = 'block';
-            document.getElementById('gantt_file-placeholder').style.display = 'block';
-            document.getElementById('reports-caption').innerText = 'The below reports are sample outputs based on template inputs. The optimal reports based on your inputs will be available here after generating the new schedule.';
+            document.getElementById('status').innerText = 'Incomplete input data. Please provide all required data.';
             return;
         }
 
@@ -650,55 +636,28 @@ async function generateSchedule() {
 
         // If the optimization was successful, display the results
         if (result.response && result.response.startsWith('Optimization successful')) {
-            // Hide sample Gantt chart image and show the new one
+            const outputBaseURL = 'https://hamedmilani.pythonanywhere.com/get_output/';
+            // Update Gantt chart
+            document.getElementById('gantt-image').src = outputBaseURL + 'schedule_gantt.png';
             document.getElementById('gantt-placeholder').style.display = 'none';
-            document.getElementById('gantt-image').src = result.gantt_chart_url;
             document.getElementById('gantt-image').style.display = 'block';
-            document.getElementById('gantt-caption').innerText = 'The optimal Gantt chart based on your inputs is displayed above.';
-
-            // Show generated report links
-            document.getElementById('schedule-csv').href = result.optimal_schedule_csv_url;
+            document.getElementById('gantt-caption').innerText = 'The below Gantt chart visualizing the optimal nurse schedule is based on your inputs.';
+            // Update Reports section
+            document.getElementById('schedule-csv').href = outputBaseURL + 'optimal_schedule.csv';
+            document.getElementById('stats-csv').href = outputBaseURL + 'nurse_stats.csv';
+            document.getElementById('coverage-csv').href = outputBaseURL + 'shift_coverage.csv';
+            document.getElementById('pdf-report').href = outputBaseURL + 'combined_nurse_reports.pdf';
+            document.getElementById('schedule-placeholder').style.display = 'none';
+            document.getElementById('stats-placeholder').style.display = 'none';
+            document.getElementById('coverage-placeholder').style.display = 'none';
+            document.getElementById('pdf-placeholder').style.display = 'none';
             document.getElementById('schedule-csv').style.display = 'block';
-            document.getElementById('stats-csv').href = result.nurse_statistics_csv_url;
             document.getElementById('stats-csv').style.display = 'block';
-            document.getElementById('coverage-csv').href = result.shift_coverage_csv_url;
             document.getElementById('coverage-csv').style.display = 'block';
-            document.getElementById('pdf-report').href = result.nurse_report_pdf_url;
             document.getElementById('pdf-report').style.display = 'block';
-            document.getElementById('gantt-report').href = result.gantt_chart_url; // Use the same URL for the download link
-            document.getElementById('gantt-report').style.display = 'block';
-
-            document.getElementById('reports-caption').innerText = 'The optimal reports based on your inputs are available below.';
-        } else {
-            // If optimization fails, revert to showing sample links or appropriate message
-            document.getElementById('gantt-placeholder').style.display = 'block';
-            document.getElementById('gantt-image').style.display = 'none';
-            document.getElementById('gantt-caption').innerText = 'The below Gantt chart is based on template inputs.';
-
-            document.getElementById('schedule-placeholder').style.display = 'block';
-            document.getElementById('stats-placeholder').style.display = 'block';
-            document.getElementById('coverage-placeholder').style.display = 'block';
-            document.getElementById('pdf-placeholder').style.display = 'block';
-            document.getElementById('gantt_file-placeholder').style.display = 'block'; // Re-show sample if failed
-            document.getElementById('reports-caption').innerText = 'The below reports are sample outputs based on template inputs. The optimal reports based on your inputs will be available here after generating the new schedule.';
+            document.getElementById('reports-caption').innerText = 'The below reports contain the optimal nurse schedule and statistics based on your inputs.';
         }
-
     } catch (error) {
-        console.error('Error:', error);
-        document.getElementById('status').innerText = 'Failed to connect to the server or process the request.';
-        // Revert to showing sample links if an error occurs
-        document.getElementById('gantt-placeholder').style.display = 'block';
-        document.getElementById('gantt-image').style.display = 'none';
-        document.getElementById('gantt-caption').innerText = 'The below Gantt chart is based on template inputs.';
-
-        document.getElementById('schedule-placeholder').style.display = 'block';
-        document.getElementById('stats-placeholder').style.display = 'block';
-        document.getElementById('coverage-placeholder').style.display = 'block';
-        document.getElementById('pdf-placeholder').style.display = 'block';
-        document.getElementById('gantt_file-placeholder').style.display = 'block'; // Re-show sample if error
-        document.getElementById('reports-caption').innerText = 'The below reports are sample outputs based on template inputs. The optimal reports based on your inputs will be available here after generating the new schedule.';
-    }
-} catch (error) {
         document.getElementById('status').innerText = 'Error: ' + error.message;
     }
 }
